[package]
name = "move"
version = "0.12.5"
edition = "2021"
description = "Move is a budget planning application that will manage the budget based on different categories like (grocery, gadgets, etc)."
license = "Apache-2.0"
repository = "https://github.com/ibilalkayy/move"
homepage = "https://github.com/ibilalkayy/move"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "command-line", "budgetplanning", "spending"]

[dependencies]
aes-gcm = "0.10.3"
arc = "0.0.1"
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
dotenv = "0.15.0"
ethers = "2.0.14"
eyre = "0.6.12"
hex = "0.4.3"
rusqlite = "0.33.0"
tabled = "0.17.0"
tokio = {version = "1.43.0", features = ["full"]}

[[bin]]
name = "move"
path = "src/main.rs"